bindings/c/whiteout_mdx.h

typedef struct whiteout_MdxNode whiteout_MdxNode;
typedef struct whiteout_MdxGeoset whiteout_MdxGeoset;
typedef struct whiteout_MdxGeosetAnimation whiteout_MdxGeosetAnimation;
typedef struct whiteout_MdxBone whiteout_MdxBone;
typedef struct whiteout_MdxTrackVector3f whiteout_MdxTrackVector3f;
typedef struct whiteout_MdxTrackF32 whiteout_MdxTrackF32;
size_t whiteout_mdx_MdxGeoset_get_textureCoordinateSets_inner_count(const whiteout_MdxGeoset* self, size_t outer_idx);
void whiteout_mdx_MdxGeoset_resize_textureCoordinateSets(whiteout_MdxGeoset* self, size_t count);
void whiteout_mdx_MdxGeoset_resize_textureCoordinateSets_inner(whiteout_MdxGeoset* self, size_t outer_idx, size_t inner_count);
const float* whiteout_mdx_MdxGeoset_get_textureCoordinateSets_inner_data(const whiteout_MdxGeoset* self, size_t outer_idx);
void whiteout_mdx_MdxGeoset_assign_textureCoordinateSets_inner(whiteout_MdxGeoset* self, size_t outer_idx, const float* data, size_t count);
/* ── MdxGeosetAnimation ─────────────────────────────────────────────── */

/* Geoset visibility and color animation */
/*  */
/* Geoset animations control the visibility and color tinting of meshes. */
whiteout_MdxGeosetAnimation* whiteout_mdx_MdxGeosetAnimation_new(void);
void whiteout_mdx_MdxGeosetAnimation_delete(whiteout_MdxGeosetAnimation* self);
/* Base alpha value */
float whiteout_mdx_MdxGeosetAnimation_get_alpha(const whiteout_MdxGeosetAnimation* self);
void whiteout_mdx_MdxGeosetAnimation_set_alpha(whiteout_MdxGeosetAnimation* self, float value);
/* Animation flags */
int32_t whiteout_mdx_MdxGeosetAnimation_get_flags(const whiteout_MdxGeosetAnimation* self);
void whiteout_mdx_MdxGeosetAnimation_set_flags(whiteout_MdxGeosetAnimation* self, int32_t value);
/* Base color tint */
whiteout_Vector3f* whiteout_mdx_MdxGeosetAnimation_get_color(whiteout_MdxGeosetAnimation* self);
void whiteout_mdx_MdxGeosetAnimation_set_color(whiteout_MdxGeosetAnimation* self, const whiteout_Vector3f* value);
/* Target geoset index */
uint32_t whiteout_mdx_MdxGeosetAnimation_get_geosetId(const whiteout_MdxGeosetAnimation* self);
void whiteout_mdx_MdxGeosetAnimation_set_geosetId(whiteout_MdxGeosetAnimation* self, uint32_t value);
/* Alpha animation */
whiteout_MdxTrackF32* whiteout_mdx_MdxGeosetAnimation_get_alphaTracks(whiteout_MdxGeosetAnimation* self);
void whiteout_mdx_MdxGeosetAnimation_set_alphaTracks(whiteout_MdxGeosetAnimation* self, const whiteout_MdxTrackF32* value);
/* Color animation */
whiteout_MdxTrackVector3f* whiteout_mdx_MdxGeosetAnimation_get_colorTracks(whiteout_MdxGeosetAnimation* self);
void whiteout_mdx_MdxGeosetAnimation_set_colorTracks(whiteout_MdxGeosetAnimation* self, const whiteout_MdxTrackVector3f* value);
/* ── MdxBone ─────────────────────────────────────────────── */

/* Skeleton bone for skinned animation */
/*  */
/* Bones  form the skeleton that deforms mesh geometry. Each bone is a node in the hierarchy and can affect one or more geosets. */
whiteout_MdxBone* whiteout_mdx_MdxBone_new(void);
void whiteout_mdx_MdxBone_delete(whiteout_MdxBone* self);
/* Base node data with transform */
whiteout_MdxNode* whiteout_mdx_MdxBone_get_node(whiteout_MdxBone* self);
void whiteout_mdx_MdxBone_set_node(whiteout_MdxBone* self, const whiteout_MdxNode* value);
/* Geoset this bone affects */
uint32_t whiteout_mdx_MdxBone_get_geosetId(const whiteout_MdxBone* self);
void whiteout_mdx_MdxBone_set_geosetId(whiteout_MdxBone* self, uint32_t value);
/* Geoset animation index */
uint32_t whiteout_mdx_MdxBone_get_geosetAnimationId(const whiteout_MdxBone* self);
void whiteout_mdx_MdxBone_set_geosetAnimationId(whiteout_MdxBone* self, uint32_t value);