bindings/java/src/main/java/whiteout/mdx/internal/Native.java

    public static final MethodHandle whiteout_mdx_MdxGeoset_get_textureCoordinateSets_inner_count = find("whiteout_mdx_MdxGeoset_get_textureCoordinateSets_inner_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_textureCoordinateSets = find("whiteout_mdx_MdxGeoset_resize_textureCoordinateSets", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_resize_textureCoordinateSets_inner = find("whiteout_mdx_MdxGeoset_resize_textureCoordinateSets_inner", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_get_textureCoordinateSets_inner_data = find("whiteout_mdx_MdxGeoset_get_textureCoordinateSets_inner_data", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxGeoset_assign_textureCoordinateSets_inner = find("whiteout_mdx_MdxGeoset_assign_textureCoordinateSets_inner", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));

    // -- MdxGeosetAnimation --
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_new = find(
        "whiteout_mdx_MdxGeosetAnimation_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_delete = find(
        "whiteout_mdx_MdxGeosetAnimation_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_get_alpha = find("whiteout_mdx_MdxGeosetAnimation_get_alpha", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_set_alpha = find("whiteout_mdx_MdxGeosetAnimation_set_alpha", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_get_flags = find("whiteout_mdx_MdxGeosetAnimation_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_set_flags = find("whiteout_mdx_MdxGeosetAnimation_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_get_color = find("whiteout_mdx_MdxGeosetAnimation_get_color", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_set_color = find("whiteout_mdx_MdxGeosetAnimation_set_color", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_get_geosetId = find("whiteout_mdx_MdxGeosetAnimation_get_geosetId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_set_geosetId = find("whiteout_mdx_MdxGeosetAnimation_set_geosetId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_get_alphaTracks = find("whiteout_mdx_MdxGeosetAnimation_get_alphaTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_set_alphaTracks = find("whiteout_mdx_MdxGeosetAnimation_set_alphaTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_get_colorTracks = find("whiteout_mdx_MdxGeosetAnimation_get_colorTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxGeosetAnimation_set_colorTracks = find("whiteout_mdx_MdxGeosetAnimation_set_colorTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- MdxBone --
    public static final MethodHandle whiteout_mdx_MdxBone_new = find(
        "whiteout_mdx_MdxBone_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxBone_delete = find(
        "whiteout_mdx_MdxBone_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxBone_get_node = find("whiteout_mdx_MdxBone_get_node", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxBone_set_node = find("whiteout_mdx_MdxBone_set_node", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxBone_get_geosetId = find("whiteout_mdx_MdxBone_get_geosetId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxBone_set_geosetId = find("whiteout_mdx_MdxBone_set_geosetId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxBone_get_geosetAnimationId = find("whiteout_mdx_MdxBone_get_geosetAnimationId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxBone_set_geosetAnimationId = find("whiteout_mdx_MdxBone_set_geosetAnimationId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
